# dense-retrieval-mining-thesis

./: .gitignore  CLUSTER_SETUP.md  Dockerfile  FILE_STRUCTURE.txt  README.md  docker-compose.yml  explore_dataset.ipynb  pyproject.toml  requirements.txt  test_results.json
scripts/: run_evaluation.sh  run_training.sh
src/: engine.py  evaluate.py  mine_negatives.py  train.py  utils.py
